--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.33"
+futures = "0.3.30"
 pgmq = "0.26.1"
 serde = "1.0.196"
 serde_json = "1.0.113"
