--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 chrono = "0.4.33"
 futures = "0.3.30"
 pgmq = "0.26.1"
-sbert = "0.4.1"
 serde = "1.0.196"
 serde_json = "1.0.113"
 tokio = { version = "1.36.0", features=["rt"]}
+ollama-rs = "0.1.7"
